Only strip solana binaries if they were actually built
Signed-off-by: Cyrill Leutwiler <bigcyrill@hotmail.com>

--- a/.github/Dockerfile
+++ b/.github/Dockerfile
@@ -4,9 +4,9 @@ LABEL org.opencontainers.image.licenses="Apache-2.0" \
     org.opencontainers.image.description="CI container for Hyperledger Solang github actions"
 
 ENV DEBIAN_FRONTEND=noninteractive
-RUN apt-get update -y
-RUN apt-get upgrade -y
-RUN apt-get install -y libz-dev pkg-config libssl-dev git cmake ninja-build gcc g++ python3
+RUN apt-get update -y && \
+	apt-get upgrade -y && \
+	apt-get install -y libz-dev pkg-config libssl-dev git cmake ninja-build gcc g++ python3
 
 RUN git clone --single-branch --branch solana-rustc/15.0-2022-08-09 \
     https://github.com/solana-labs/llvm-project.git
@@ -25,21 +25,22 @@ RUN cmake --build . --target install && \
 FROM ubuntu:20.04
 
 ENV DEBIAN_FRONTEND=noninteractive
-RUN apt-get update
-RUN apt-get install -y zlib1g-dev pkg-config libssl-dev git libffi-dev curl gcc g++ make python3
-RUN apt-get clean
-RUN apt-get autoclean
+RUN apt-get update && \
+	apt-get install -y zlib1g-dev pkg-config libssl-dev git libffi-dev curl gcc g++ make python3 && \
+	apt-get clean && \
+	apt-get autoclean
 
 # Get Rust
-RUN curl https://sh.rustup.rs -sSf | bash -s -- -y --default-toolchain 1.65.0 --profile minimal
+RUN curl https://sh.rustup.rs -sSf | bash -s -- -y --default-toolchain 1.64.0 --profile minimal
 
 COPY --from=builder /llvm15.0 /llvm15.0/
 
 ENV PATH="/llvm15.0/bin:/root/.cargo/bin:/root/.local/share/solana/install/active_release/bin:${PATH}"
 
 # Install Solana (x86-64 only, does not work on arm)
-RUN if test `arch` = x86_64; then sh -c "$(curl -sSfL https://release.solana.com/v1.11.10/install)"; fi && \
+RUN if test `arch` = x86_64; then \
+		sh -c "$(curl -sSfL https://release.solana.com/v1.11.10/install)" && \
+		find /root/.local/share/solana/install/releases/1.11.10/solana-release/bin/ -type f -executable -exec sh -c "file '{}' | grep -q 'not stripped' " \; -print | xargs strip fi; \
+	fi && \
 	cargo install --git https://github.com/coral-xyz/anchor --tag v0.27.0 anchor-cli && \
-	rm -rf /root/.cargo/registry && \
-	find /root/.local/share/solana/install/releases/1.11.10/solana-release/bin/ -type f -executable -exec sh -c "file '{}' | grep -q 'not stripped' " \; -print | xargs strip
-
+	rm -rf /root/.cargo/registry
