--- a/.github/Dockerfile
+++ b/.github/Dockerfile
@@ -40,7 +40,7 @@ ENV PATH="/llvm15.0/bin:/root/.cargo/bin:/root/.local/share/solana/install/activ
 # Install Solana (x86-64 only, does not work on arm)
 RUN if test `arch` = x86_64; then \
 		sh -c "$(curl -sSfL https://release.solana.com/v1.11.10/install)" && \
-		find /root/.local/share/solana/install/releases/1.11.10/solana-release/bin/ -type f -executable -exec sh -c "file '{}' | grep -q 'not stripped' " \; -print | xargs strip fi; \
+		find /root/.local/share/solana/install/releases/1.11.10/solana-release/bin/ -type f -executable -exec sh -c "file '{}' | grep -q 'not stripped' " \; -print | xargs strip; \
 	fi && \
 	cargo install --git https://github.com/coral-xyz/anchor --tag v0.27.0 anchor-cli && \
 	rm -rf /root/.cargo/registry
