--- a/.github/workflows/build-llvm.yml
+++ b/.github/workflows/build-llvm.yml
@@ -65,7 +65,7 @@ jobs:
 
   windows:
     name: Windows
-    runs-on: windows-latest-l
+    runs-on: solang-windows-latest
     steps:
     - name: Checkout sources
       uses: actions/checkout@v3.1.0
