--- a/.github/Dockerfile
+++ b/.github/Dockerfile
@@ -15,7 +15,7 @@ WORKDIR /llvm-project
 
 RUN cmake -G Ninja -DLLVM_ENABLE_ASSERTIONS=On -DLLVM_ENABLE_TERMINFO=Off \
     -DLLVM_ENABLE_PROJECTS=clang\;lld \
-    -DLLVM_TARGETS_TO_BUILD=WebAssembly\;BPF \
+    -DLLVM_TARGETS_TO_BUILD=WebAssembly\;SBF \
     -DLLVM_ENABLE_ZSTD=Off \
     -DCMAKE_BUILD_TYPE=MinSizeRel -DCMAKE_INSTALL_PREFIX=/llvm15.0 llvm
 
