--- a/.github/Dockerfile
+++ b/.github/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:20.04 as builder
+FROM ubuntu:22.04 as builder
 
 LABEL org.opencontainers.image.licenses="Apache-2.0" \
     org.opencontainers.image.description="CI container for Hyperledger Solang github actions"
@@ -6,7 +6,7 @@ LABEL org.opencontainers.image.licenses="Apache-2.0" \
 ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update -y && \
 	apt-get upgrade -y && \
-	apt-get install -y libz-dev pkg-config libssl-dev git cmake ninja-build gcc g++ python3
+	apt-get install -y libz-dev pkg-config libssl-dev git cmake ninja-build gcc g++ python3 file
 
 RUN git clone --single-branch --branch solana-rustc/15.0-2022-08-09 \
     https://github.com/solana-labs/llvm-project.git
@@ -22,16 +22,16 @@ RUN cmake -G Ninja -DLLVM_ENABLE_ASSERTIONS=On -DLLVM_ENABLE_TERMINFO=Off \
 RUN cmake --build . --target install && \
 	find /llvm15.0/ -type f -executable -exec sh -c "file '{}' | grep -q 'not stripped' " \; -print | xargs strip
 
-FROM ubuntu:20.04
+FROM ubuntu:22.04
 
 ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update && \
-	apt-get install -y zlib1g-dev pkg-config libssl-dev git libffi-dev curl gcc g++ make python3 && \
+	apt-get install -y zlib1g-dev pkg-config libssl-dev git libffi-dev curl gcc g++ make python3 file && \
 	apt-get clean && \
 	apt-get autoclean
 
 # Get Rust
-RUN curl https://sh.rustup.rs -sSf | bash -s -- -y --default-toolchain 1.65.0 --profile minimal
+RUN curl https://sh.rustup.rs -sSf | bash -s -- -y --default-toolchain 1.68.0 --profile minimal
 
 COPY --from=builder /llvm15.0 /llvm15.0/
 
@@ -39,8 +39,8 @@ ENV PATH="/llvm15.0/bin:/root/.cargo/bin:/root/.local/share/solana/install/activ
 
 # Install Solana (x86-64 only, does not work on arm)
 RUN if test `arch` = x86_64; then \
-		sh -c "$(curl -sSfL https://release.solana.com/v1.11.10/install)" && \
-		find /root/.local/share/solana/install/releases/1.11.10/solana-release/bin/ -type f -executable -exec sh -c "file '{}' | grep -q 'not stripped' " \; -print | xargs strip; \
+		sh -c "$(curl -sSfL https://release.solana.com/v1.14.16/install)" && \
+		find /root/.local/share/solana/install/releases/1.14.16/solana-release/bin/ -type f -executable -exec sh -c "file '{}' | grep -q 'not stripped' " \; -print | xargs strip; \
 	fi && \
 	cargo install --git https://github.com/coral-xyz/anchor --tag v0.27.0 anchor-cli && \
 	rm -rf /root/.cargo/registry
