--- a/.github/Dockerfile
+++ b/.github/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:20.04 as builder
+FROM ubuntu:22.04 as builder
 
 LABEL org.opencontainers.image.licenses="Apache-2.0" \
     org.opencontainers.image.description="CI container for Hyperledger Solang github actions"
@@ -22,7 +22,7 @@ RUN cmake -G Ninja -DLLVM_ENABLE_ASSERTIONS=On -DLLVM_ENABLE_TERMINFO=Off \
 RUN cmake --build . --target install && \
 	find /llvm15.0/ -type f -executable -exec sh -c "file '{}' | grep -q 'not stripped' " \; -print | xargs strip
 
-FROM ubuntu:20.04
+FROM ubuntu:22.04
 
 ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update && \
@@ -39,8 +39,9 @@ ENV PATH="/llvm15.0/bin:/root/.cargo/bin:/root/.local/share/solana/install/activ
 
 # Install Solana (x86-64 only, does not work on arm)
 RUN if test `arch` = x86_64; then \
-		sh -c "$(curl -sSfL https://release.solana.com/v1.14.16/install)" && \
-		find /root/.local/share/solana/install/releases/1.14.16/solana-release/bin/ -type f -executable -exec sh -c "file '{}' | grep -q 'not stripped' " \; -print | xargs strip; \
+		sh -c "$(curl -sSfL https://release.solana.com/v1.16.1/install)" && \
+		find /root/.local/share/solana/install/releases/1.16.1/solana-release/bin/ -type f -executable -exec sh -c "file '{}' | grep -q 'not stripped' " \; -print | xargs strip; \
+		rm /root/.local/share/solana/install/active_release/bin/solang; \
 	fi && \
-	cargo install --git https://github.com/coral-xyz/anchor --tag v0.27.0 anchor-cli && \
+	cargo install --git https://github.com/coral-xyz/anchor --tag v0.28.0 anchor-cli && \
 	rm -rf /root/.cargo/registry
