Add GitHub ARM64 runners
Signed-off-by: Ry Jones <ry@linux.com>

--- a/.github/workflows/ci-image.yml
+++ b/.github/workflows/ci-image.yml
@@ -2,7 +2,7 @@ name: Build and push ci image
 on: [workflow_dispatch]
 jobs:
   build-push-ci-image:
-    runs-on: linux-arm64
+    runs-on: solang-arm
     steps:
       - name: Checkout sources
         uses: actions/checkout@v3.1.0
