--- a/.github/workflows/build-llvm.yml
+++ b/.github/workflows/build-llvm.yml
@@ -38,7 +38,7 @@ jobs:
 
   linux-arm64:
     name: Linux arm64
-    runs-on: linux-arm64
+    runs-on: solang-arm
     if: ${{ github.repository_owner == 'hyperledger' }}
     steps:
     - name: Checkout sources
